crates/sparrow-compiler/src/snapshots/sparrow_compiler__plan__tests__simple_plan.snap
---
source: sparrow-compiler/src/plan.rs
expression: "create_plan(\"simple_plan\", &DataContext::for_test(),\n            FeatureSet::new(\"{ x: Table1.x_i64 + 10 }\", vec![]), None,\n            PerEntityBehavior::All).await.unwrap()"
---
per_entity_behavior: 1
operations:
  - expressions:
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: x_i64
                  data_type:
                    kind:
                      Primitive: 6
                - name: y_i64
                  data_type:
                    kind:
                      Primitive: 6
                - name: s_str
                  data_type:
                    kind:
                      Primitive: 14
                - name: z_i32
                  data_type:
                    kind:
                      Primitive: 5
                - name: f_f64
                  data_type:
                    kind:
                      Primitive: 13
                - name: a_bool
                  data_type:
                    kind:
                      Primitive: 2
                - name: b_bool
                  data_type:
                    kind:
                      Primitive: 2
        output: false
        operator:
          Input:
            producing_operation: 0
            input_column: 0
            interpolation: 1
            column:
              ScanRecord: ~
      - arguments: []
        result_type:
          kind:
            Primitive: 24
        output: false
        operator:
          LateBound: 1
      - arguments: []
        result_type:
          kind:
            Primitive: 6
        output: false
        operator:
          Literal:
            literal:
              Int64: 10
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: x_i64
      - arguments:
          - 0
          - 3
        result_type:
          kind:
            Primitive: 6
        output: false
        operator:
          Instruction: field_ref
      - arguments:
          - 4
          - 2
        result_type:
          kind:
            Primitive: 6
        output: false
        operator:
          Instruction: add
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: x
      - arguments:
          - 6
          - 5
        result_type:
          kind:
            Struct:
              fields:
                - name: x
                  data_type:
                    kind:
                      Primitive: 6
        output: true
        operator:
          Instruction: record
      - arguments:
          - 7
        result_type:
          kind:
            Primitive: 24
        output: false
        operator:
          Instruction: time_of
      - arguments:
          - 8
          - 1
        result_type:
          kind:
            Primitive: 2
        output: true
        operator:
          Instruction: gte
    operator:
      Scan:
        table_id:
          high: 0
          low: 0
        schema:
          fields:
            - name: x_i64
              data_type:
                kind:
                  Primitive: 6
            - name: y_i64
              data_type:
                kind:
                  Primitive: 6
            - name: s_str
              data_type:
                kind:
                  Primitive: 14
            - name: z_i32
              data_type:
                kind:
                  Primitive: 5
            - name: f_f64
              data_type:
                kind:
                  Primitive: 13
            - name: a_bool
              data_type:
                kind:
                  Primitive: 2
            - name: b_bool
              data_type:
                kind:
                  Primitive: 2
        slice_plan:
          table_name: Table1
          slice: ~
  - expressions:
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: x
                  data_type:
                    kind:
                      Primitive: 6
        output: true
        operator:
          Input:
            producing_operation: 0
            input_column: 3
            interpolation: 1
            column:
              ProducerExpression: 7
    operator:
      Select:
        input: 0
        condition:
          producing_operation: 0
          input_column: 4
          interpolation: 1
          column:
            ProducerExpression: 9
primary_grouping: group
primary_grouping_key_type:
  kind:
    Primitive: 6

